Lagt til termostat på badet i straumspareautomasjonen

--- a/packages/power.yaml
+++ b/packages/power.yaml
@@ -48,6 +48,10 @@ script:
                   entity_id: climate.basement_hall_floor_heating
                 data:
                   temperature: 20
+              - service: climate.set_temperature
+                target:
+                  entity_id: climate.bathroom_basement_temperature
+                  temperature: 20
               - service: climate.set_preset_mode
                 target:
                   entity_id: climate.bedroom_ingeborg_temperature
@@ -105,6 +109,10 @@ script:
                   entity_id: climate.basement_hall_floor_heating
                 data:
                   temperature: 24
+              - service: climate.set_temperature
+                target:
+                  entity_id: climate.bathroom_basement_temperature
+                  temperature: 28
               - service: climate.set_preset_mode
                 target:
                   entity_id: climate.bedroom_ingeborg_temperature
