--- a/esphome/kjellerkontor.yaml
+++ b/esphome/kjellerkontor.yaml
@@ -4,8 +4,8 @@ esphome:
   board: nodemcuv2
 
 wifi:
-  ssid: "kringler2b"
-  password: "annelise"
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
