--- a/packages/fridge.yaml
+++ b/packages/fridge.yaml
@@ -32,7 +32,7 @@ sensor:
     end: "{{ now() }}"
 
 template:
-  sensor:
+  - sensor:
     - name: fridge_kitchen_power
       unique_id: fridge_kitchen_power
       device_class: power
