--- a/packages/dishwasher.yaml
+++ b/packages/dishwasher.yaml
@@ -64,7 +64,7 @@ automation:
     - platform: state
       entity_id: sensor.dishwasher_running
       to: 'False'
-      for: 00:00:30
+      for: 00:01:30
       from: 'True'
     condition: []
     action:
@@ -87,32 +87,32 @@ automation:
     #     data:
     #       ttl: 0
     #       priority: high
-    - service: notify.mobile_app_sbm_2016
+    - service: notify.mobile_app_iphone
       data:
         message: Oppvaskmaskinen er ferdig
         title: The computer says
-    - service: notify.telia_box_loftet
-      data:
-        data:
-          fontsize: large
-          position: bottom-right
-          duration: 10
-          transparency: 50%
-          image:
-            url: !secret dishwasher_image_url
-        message: Oppvaskmaskinen er ferdig
-        title: The computer says
-    - service: notify.telia_box_stue
-      data:
-        data:
-          fontsize: large
-          position: bottom-right
-          duration: 10
-          transparency: 50%
-          image:
-            url: !secret dishwasher_image_url
-        message: Oppvaskmaskinen er ferdig
-        title: The computer says
+    # - service: notify.telia_box_loftet
+    #   data:
+    #     data:
+    #       fontsize: large
+    #       position: bottom-right
+    #       duration: 10
+    #       transparency: 50%
+    #       image:
+    #         url: !secret dishwasher_image_url
+    #     message: Oppvaskmaskinen er ferdig
+    #     title: The computer says
+    # - service: notify.telia_box_stue
+    #   data:
+    #     data:
+    #       fontsize: large
+    #       position: bottom-right
+    #       duration: 10
+    #       transparency: 50%
+    #       image:
+    #         url: !secret dishwasher_image_url
+    #     message: Oppvaskmaskinen er ferdig
+    #     title: The computer says
     mode: single
 
 alert:
