--- a/packages/entrance.yaml
+++ b/packages/entrance.yaml
@@ -8,7 +8,27 @@ automation:
         to: "on"
     condition: []
     action:
-      - service: notify.telia_box_loftet
+      # - service: notify.mobile_app_ronny_pixel_7_pro #notify.mobile_app_ronnys_iphone
+      #   data:
+      #     message: Person observert
+      #     title: The computer says
+      #     data:
+      #       ttl: 0
+      #       priority: high
+      # - service: notify.telia_box_loftet
+      #   data:
+      #     message: En luring er observert...
+      #     title: Så noen
+      #     data:
+      #       fontsize: small
+      #       position: bottom-right
+      #       duration: 10
+      #       transparency: 50%
+      #       image:
+      #         url: http://192.168.68.42:8123{{ state_attr('camera.ezviz_person','entity_picture') }}
+      #         username: !secret adm_user
+      #         password: !secret adm_password
+      - service: notify.attic_google_tv
         data:
           message: En luring er observert...
           title: Så noen
@@ -21,30 +41,31 @@ automation:
               url: http://192.168.68.42:8123{{ state_attr('camera.ezviz_person','entity_picture') }}
               username: !secret adm_user
               password: !secret adm_password
-      - service: notify.telia_box_stue
-        data:
-          message: En luring er observert...
-          title: Så noen
-          data:
-            fontsize: small
-            position: bottom-right
-            duration: 10
-            transparency: 50%
-            image:
-              url: http://192.168.68.42:8123{{ state_attr('camera.ezviz_person','entity_picture') }}
-              username: !secret adm_user
-              password: !secret adm_password
-      - service: notify.telia_box_ingeborg
-        data:
-          message: En luring er observert...
-          title: Så noen
-          data:
-            fontsize: small
-            position: bottom-right
-            duration: 10
-            transparency: 50%
-            image:
-              url: http://192.168.68.42:8123{{ state_attr('camera.ezviz_person','entity_picture') }}
-              username: !secret adm_user
-              password: !secret adm_password
+      
+      # - service: notify.telia_box_stue
+      #   data:
+      #     message: En luring er observert...
+      #     title: Så noen
+      #     data:
+      #       fontsize: small
+      #       position: bottom-right
+      #       duration: 10
+      #       transparency: 50%
+      #       image:
+      #         url: http://192.168.68.42:8123{{ state_attr('camera.ezviz_person','entity_picture') }}
+      #         username: !secret adm_user
+      #         password: !secret adm_password
+      # - service: notify.telia_box_ingeborg
+      #   data:
+      #     message: En luring er observert...
+      #     title: Så noen
+      #     data:
+      #       fontsize: small
+      #       position: bottom-right
+      #       duration: 10
+      #       transparency: 50%
+      #       image:
+      #         url: http://192.168.68.42:8123{{ state_attr('camera.ezviz_person','entity_picture') }}
+      #         username: !secret adm_user
+      #         password: !secret adm_password
     mode: single
