--- a/packages/power.yaml
+++ b/packages/power.yaml
@@ -7,14 +7,14 @@ automation:
         minutes: /10
       - platform: numeric_state
         entity_id: sensor.power_usage_current_hour_estimated_from_last_10_min
-        above: "4.95"
+        above: "4.9"
         for:
           hours: 0
           minutes: 0
           seconds: 30
       - platform: numeric_state
         entity_id: sensor.power_usage_current_hour_estimated_from_last_10_min
-        below: "4.95"
+        below: "4.9"
         for:
           hours: 0
           minutes: 5
@@ -31,17 +31,17 @@ script:
     description: "Turn on and of utilities to control power consumption"
     mode: restart
     variables:
-      power_limit: 4.95
+      power_limit: 9.95
     sequence:
       - choose:
           - conditions:
             - condition: numeric_state
               entity_id: sensor.power_usage_current_hour_estimated_from_last_10_min
-              above: "4.95"
+              above: "4.9"
             - condition: state
               entity_id: climate.basement_hall_floor_heating
-              state: "heating"
-              attribute: hvac_action
+              state: 24
+              attribute: temperature
             sequence:
               - service: climate.set_temperature
                 target:
@@ -52,15 +52,15 @@ script:
           - conditions:
             - condition: numeric_state
               entity_id: sensor.power_usage_current_hour_estimated_from_last_10_min
-              above: "4.95"              
+              above: "4.9"              
             - condition: state
               entity_id: climate.basement_hall_floor_heating
-              state: "idle"
-              attribute: hvac_action
+              state: 20
+              attribute: temperature
             - condition: state
               entity_id: climate.bathroom_basement_temperature
-              state: "heating"
-              attribute: hvac_action
+              state: 27
+              attribute: temperature
             sequence:    
               - service: climate.set_temperature
                 target:
@@ -71,15 +71,15 @@ script:
           - conditions:
             - condition: numeric_state
               entity_id: sensor.power_usage_current_hour_estimated_from_last_10_min
-              above: "4.95"
+              above: "4.9"
             - condition: state
               entity_id: climate.basement_hall_floor_heating
-              state: "idle"
-              attribute: hvac_action
+              state: 20
+              attribute: temperature
             - condition: state
               entity_id: climate.bathroom_basement_temperature
-              state: "idle"
-              attribute: hvac_action
+              state: 20
+              attribute: temperature
             - condition: state
               entity_id: switch.hot_water_plug
               state: "on"
@@ -91,15 +91,15 @@ script:
           - conditions:
             - condition: numeric_state
               entity_id: sensor.power_usage_current_hour_estimated_from_last_10_min
-              below: "4.95"
+              below: "4.9"
             - condition: state
               entity_id: climate.basement_hall_floor_heating
-              state: "idle"
-              attribute: hvac_action
+              state: 20
+              attribute: temperature
             - condition: state
               entity_id: climate.bathroom_basement_temperature
-              state: "idle"
-              attribute: hvac_action
+              state: 20
+              attribute: temperature
             - condition: state
               entity_id: switch.hot_water_plug
               state: "off"
@@ -111,30 +111,30 @@ script:
           - conditions:
             - condition: numeric_state
               entity_id: sensor.power_usage_current_hour_estimated_from_last_10_min
-              below: "4.95"
+              below: "4.9"
             - condition: state
               entity_id: climate.basement_hall_floor_heating
-              state: "idle"
-              attribute: hvac_action
+              state: 20
+              attribute: temperature
             - condition: state
               entity_id: climate.bathroom_basement_temperature
-              state: "idle"
-              attribute: hvac_action
+              state: 20
+              attribute: temperature
             sequence:              
               - service: climate.set_temperature
                 target:
                   entity_id: climate.bathroom_basement_temperature
                 data:
-                  temperature: 28
+                  temperature: 27
 
           - conditions:
             - condition: numeric_state
               entity_id: sensor.power_usage_current_hour_estimated_from_last_10_min
-              below: "4.95"
+              below: "4.9"
             - condition: state
               entity_id: climate.basement_hall_floor_heating
-              state: "idle"
-              attribute: hvac_action
+              state: 20
+              attribute: temperature
             sequence:
               - service: climate.set_temperature
                 target:
@@ -174,6 +174,13 @@ sensor:
     round: 2
     method: left
     unit_prefix: k
+
+  - platform: filter
+    name: "Power Average 10 minutes"
+    entity_id: sensor.energy_total
+    filters:
+      - filter: time_simple_moving_average
+        window_size: "00:10"
 
   - platform: sql
     queries:
@@ -319,6 +326,60 @@ utility_meter:
 
   total_monthly_cost_nordpool:
     source: sensor.electricity_cost_nordpool
-    name: Totalt daglig Nordpool
-    unique_id: total_daily_cost_nordpool
+    name: Totalt månedlig Nordpool
+    unique_id: total_monthly_cost_nordpool
     cycle: monthly
+
+
+rest:
+  - scan_interval: 43200
+    resource: https://raw.githubusercontent.com/martinju/stromstotte/master/data/current_estimated_compensation.json
+    sensor:
+      - name: "Estimated power payback 2,5%"
+        json_attributes_path: "$.19"
+        value_template: "{{ value_json.48.compensation | round (2)}}"
+        unit_of_measurement: "NOK/kWh"
+        json_attributes:
+        - "estimation_date"
+        - "computation_year"
+        - "computation_month"
+      - name: "Estimated power payback 97,5%"
+        json_attributes_path: "$.26"
+        value_template: "{{ value_json.26.compensation | round (2)}}"
+        unit_of_measurement: "NOK/kWh"
+        json_attributes:
+        - "estimation_date"
+        - "computation_year"
+        - "computation_month"
+      - name: "Estimated power average price"
+        json_attributes_path: "$.16"
+        value_template: "{{ value_json.16.mean_price | round (2)}}"
+        unit_of_measurement: "NOK/kWh"
+        json_attributes:
+        - "estimation_date"
+        - "computation_year"
+        - "computation_month"
+      - name: "Estimated power average price 2,5%"
+        json_attributes_path: "$.19"
+        value_template: "{{ value_json.19.mean_price | round (2)}}"
+        unit_of_measurement: "NOK/kWh"
+        json_attributes:
+        - "estimation_date"
+        - "computation_year"
+        - "computation_month"
+      - name: "Estimated power average price 97,5%"
+        json_attributes_path: "$.26"
+        value_template: "{{ value_json.26.mean_price | round (2)}}"
+        unit_of_measurement: "NOK/kWh"
+        json_attributes:
+        - "estimation_date"
+        - "computation_year"
+        - "computation_month"
+      - name: "Estimated power payback 95%s"
+        json_attributes_path: "$.25"
+        value_template: "{{ value_json.25.compensation |float }}"
+        unit_of_measurement: "NOK/kWh"
+        json_attributes:
+        - "estimation_date"
+        - "computation_year"
+        - "computation_month"
